style.css
body {
    display: flex;
    flex-direction: column;
    margin: 0px;
    font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 18px;
    color: #E5E7EB;
}

.footer, .hero {
    display: flex;
    background-color: #1F2937;
}

.hero {
    flex-direction: column;
    align-items: stretch;
    padding: 0 164px;
}

.nav {
    display: flex;
    justify-content: space-between;
    padding-top: 16px;
}


.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

ul {
    display: flex;
    list-style: none;
    margin: 0px;
    padding: 0px;
    gap: 10px;
}

.sub-nav {
    display: flex;
    gap: 40px;
    padding: 56px 0px;
}

h1 {
    font-size: 48px;
    font-weight: extra-bold;
    color: #F9FAF8;
    align-self: stretch;
    margin: 0px;
}

.right {
    display: flex;
    background-color: #6D747D;
    width: 1400px;
    height: 300px;
    justify-content: center;
    align-items: center;
    margin: 0px;
}

button {
    width: 140px;
    height: 40px;
    border-radius: 5px;
}
.sign {
    background-color: #3882F6;
    border-style: none;
}

.randinfo {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 24px 320px;
}

.infohead {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
}
.illustration {
    display: flex;
}

.rounded {
    width: 150px;
    height: 150px;
    border-radius: 10%;
    border-color: #3882F6;
    border-style: solid;
}

figure {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
figcaption {
    text-align: center;

}

figcaption {
    color: #6D747D;
}

.quote {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 24px 320px;
}

.quote-text {
    color: #1F2937;
    font-size: 36px;;
    font-style: italic;
    font-weight: 300;
    text-align: justify;
}

.source {
    size: 24px;
    font-weight: bold;
    color: #1F2937;
    align-self: flex-end;
}

.box {
    margin: 64px;
    background-color: #3882F6;
    border-radius: 5px;
    padding: 16px 64px;
    display: flex;
    gap: 48px;
}

.action-head {
    color: #F9FAF8;
}
.action-sign {
    align-self: center;
    border-style: solid;
    border-color: #F9FAF8;
    background-color: #3882F6;
    color: #F9FAF8;
}

.footer {
    display: flex;
    align-self: center;
    justify-content: center;
    align-self: stretch;
    padding: 16px;
}

